{
    "version": 1,
    "name": "Combat",
    "maps": [
        {
            "name": "Battle",
            "id": "f0e353d7-e0f7-4024-9468-c738500916ce",
            "actions": [
                {
                    "name": "BasicAttack",
                    "type": "Button",
                    "id": "ed9d9584-a84c-426a-b861-001cc6701aeb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenSkillMenu",
                    "type": "Button",
                    "id": "e6219bc6-4ed6-4145-8ae7-9152f341a5ed",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill 1",
                    "type": "Button",
                    "id": "9a86a2c0-190a-441b-b96e-5eb1ac286e7a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill 2",
                    "type": "Button",
                    "id": "e29d0664-f178-42e1-995c-e53ebd86ffca",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill 3",
                    "type": "Button",
                    "id": "007243b2-ac11-4f8e-929f-136403832dc7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenItemMenu",
                    "type": "Button",
                    "id": "ca272c56-d6be-4712-a248-c5a7212954e3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "0e4d3814-3e44-4b38-8e6c-f1fbd461c15c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "e76618b7-ec10-4aa2-8cbf-ee7001e4b0f2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrevTarget",
                    "type": "Button",
                    "id": "9324ff69-2b0f-450b-8024-6b919a2ff8a9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextTarget",
                    "type": "Button",
                    "id": "21ccf779-b9ed-4637-bf2f-0ecb388e919c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Parry",
                    "type": "Button",
                    "id": "fe438b32-2ec2-4c73-ba7a-67f7ba7b6793",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e757e1ad-4de5-4d2c-be77-7dc1bf720f24",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b29b031e-846d-48cd-96f7-2a7c575b0dcb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenSkillMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9b2a205-b50e-4589-9334-d493fd4860ad",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill 1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a6c0c1e-58c0-477b-a23a-16daf998d092",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill 2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "290d7287-8760-4b89-92bf-c12577f4f2ee",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill 3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1078baa-7391-4f6b-ad8a-89c0298de087",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenItemMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc48796a-dd09-4bb6-9dd1-7eafdff39f54",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ec36a66-f044-4900-b05f-5174900f130a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1d79ace-aa42-41ea-9ae4-07482923be8d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrevTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3ae2d38-fed4-4e6b-98d1-cb6b6329b695",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b41d15ac-77a8-4f76-bd0a-476cc34b8ee8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Parry",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SkillMenu",
            "id": "941449a7-2209-48cb-9a47-575f5724da89",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "4c9fa00e-8747-4ac7-80a0-2b6733118067",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "12934de6-0f76-410f-9979-3f2235845f5d",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}