using UnityEngine;
using UnityEngine.InputSystem;

public class BattleInputController : MonoBehaviour
{
    private CombatInputActions input;
    private BattleManager battle;

    private void OnEnable()
    {
        battle = GetComponent<BattleManager>();
        if (battle == null)
        {
            Debug.LogError("âŒ BattleInputController: Missing BattleManager");
            enabled = false;
            return;
        }

        // ğŸ”¥ INIT INPUT á» ÄÃ‚Y (KHÃ”NG PHáº¢I AWAKE)
        input = new CombatInputActions();

        // ğŸ”¥ ENABLE ÄÃšNG ACTION MAP
        input.Battle.Enable();

        // ===== REGISTER CALLBACKS =====
        input.Battle.BasicAttack.performed += OnBasicAttack;
        //input.Battle.OpenSkillMenu.performed += OnOpenSkillMenu;
        //input.Battle.OpenItemMenu.performed += OnOpenItemMenu;
        //input.Battle.Confirm.performed += OnConfirm;
        //input.Battle.Cancel.performed += OnCancel;
        input.Battle.NextTarget.performed += OnNextTarget;
        input.Battle.PrevTarget.performed += OnPrevTarget;
        //input.Battle.Parry.performed += OnParry;

        Debug.Log("âœ… BattleInputController ENABLED");
    }

    private void OnDisable()
    {
        if (input == null) return;

        input.Battle.BasicAttack.performed -= OnBasicAttack;
        //input.Battle.OpenSkillMenu.performed -= OnOpenSkillMenu;
        //input.Battle.OpenItemMenu.performed -= OnOpenItemMenu;
        //input.Battle.Confirm.performed -= OnConfirm;
        //input.Battle.Cancel.performed -= OnCancel;
        input.Battle.NextTarget.performed -= OnNextTarget;
        input.Battle.PrevTarget.performed -= OnPrevTarget;
        //input.Battle.Parry.performed -= OnParry;

        input.Battle.Disable();
        input.Dispose();
        input = null;

        Debug.Log("ğŸ›‘ BattleInputController DISABLED");
    }

    // ===== INPUT CALLBACKS =====

    private void OnBasicAttack(InputAction.CallbackContext ctx)
    {
        Debug.Log("ğŸ® Input: BasicAttack");
        battle.SelectBasicAttack();
    }

    private void OnNextTarget(InputAction.CallbackContext ctx)
    {
        Debug.Log("ğŸ¯ Input: NextTarget");
        battle.ChangeTargetInput(1);
    }

    private void OnPrevTarget(InputAction.CallbackContext ctx)
    {
        Debug.Log("ğŸ¯ Input: PrevTarget");
        battle.ChangeTargetInput(-1);
    }

}
